manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-runner
spec:
  replicas: 1
  template:
    spec:
      volumes:

        # We're creating two emptyDir [1] volumes here, which means
        # that ephemeral storage space will be allocated when the Pod
        # starts and destroyed when the Pod exits.
        #
        # If you needed persistent storage you would use a
        # persistentVolumeClaim [2] instead of an emptyDir.
        #
        # [1]: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
        # [2]: https://kubernetes.io/docs/concepts/storage/persistent-volumes/

        # This volume will hold conents of the remote repository
        - name: test-runner-tests
          emptyDir: {}

        # This is a general purpose directory we will use for writing
        # any sort of state while the application is running.
        - name: test-runner-home
          emptyDir: {}

      containers:
        - name: test-runner
          image: ghcr.io/larsks/example-test-runner:main
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: test-runner-tests
              mountPath: /tests

            # In this container we're mounting the state directory on
            # /app/data, since the application will be running with a cwd
            # of /app (due to the WORKDIR directive in the Containerfile).
            - name: test-runner-home
              mountPath: /app/data
