manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-runner
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
