manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-runner
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: test-runner
